--- a/themes/uoc/static/admin/config.yml
+++ b/themes/uoc/static/admin/config.yml
@@ -3,8 +3,8 @@ backend:
   name: github
   branch: master
   repo: albirasolutions/UOC_WebRI
-  base_url: https://eh7d3mcjpg.execute-api.eu-west-1.amazonaws.com # Path to ext auth provider
-  auth_endpoint: /prod/auth
+  base_url: https://webri.albira.io # Path to ext auth provider
+  auth_endpoint: /api-oauth/auth
 media_folder: "static/img" # Media files will be stored in the repo under static/media/
 public_folder: "/img"
 publish_mode: editorial_workflow
@@ -2491,6 +2491,7 @@ collections: # A list of collections the CMS should be able to edit
     fields:
       - {label: Títol, name: title, widget: string}
       - {label: Idioma, name: language, widget: select, options: ["ca","es","en"],default: "ca"}       
+      - {label: Data de creació, name: createDate, widget: datetime}
       - label: General
         name: general
         widget: object
@@ -2531,6 +2532,7 @@ collections: # A list of collections the CMS should be able to edit
     fields:
       - {label: Título, name: title, widget: string}
       - {label: Idioma, name: language, widget: select, options: ["ca","es","en"],default: "es"}       
+      - {label: Fecha de creación, name: createDate, widget: datetime}
       - label: General
         name: general
         widget: object
@@ -2571,6 +2573,7 @@ collections: # A list of collections the CMS should be able to edit
     fields:
       - {label: Title, name: title, widget: string}
       - {label: Language, name: language, widget: select, options: ["ca","es","en"],default: "en"}       
+      - {label: CreateDate, name: createDate, widget: datetime}
       - label: General
         name: general
         widget: object
@@ -2612,6 +2615,7 @@ collections: # A list of collections the CMS should be able to edit
     fields:
       - {label: Títol, name: title, widget: string}
       - {label: Idioma, name: language, widget: select, options: ["ca","es","en"],default: "ca"}       
+      - {label: Data de creació, name: createDate, widget: datetime}
       - label: General
         name: general
         widget: object
@@ -2642,6 +2646,7 @@ collections: # A list of collections the CMS should be able to edit
     fields:
       - {label: Título, name: title, widget: string}
       - {label: Idioma, name: language, widget: select, options: ["ca","es","en"],default: "es"}       
+      - {label: Fecha de creación, name: createDate, widget: datetime}
       - label: General
         name: general
         widget: object
@@ -2672,6 +2677,7 @@ collections: # A list of collections the CMS should be able to edit
     fields:
       - {label: Title, name: title, widget: string}
       - {label: Language, name: language, widget: select, options: ["ca","es","en"],default: "en"}       
+      - {label: CreateDate, name: createDate, widget: datetime}
       - label: General
         name: general
         widget: object
