--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -3,8 +3,8 @@ backend:
   name: github
   branch: master
   repo: albirasolutions/UOC_WebRI
-  base_url: https://eh7d3mcjpg.execute-api.eu-west-1.amazonaws.com # Path to ext auth provider
-  auth_endpoint: /prod/auth
+  base_url: https://webri.albira.io # Path to ext auth provider
+  auth_endpoint: /api-oauth/auth
 media_folder: "static/img" # Media files will be stored in the repo under static/media/
 public_folder: "/img"
 publish_mode: editorial_workflow
