--- a/serverless.yml
+++ b/serverless.yml
@@ -24,7 +24,7 @@ functions:
     handler: event.search
     events:
       - http:
-          path: search
+          path: api-ri/search
           method: get
           cors: true
 custom:
