--- a/config/PRO/config.toml
+++ b/config/PRO/config.toml
@@ -1,5 +1,5 @@
 [params]
   apiPlatacon = ""
-  apiRI = "/api-ri/search"
+  apiRI = ""
   authProviderBaseUrl = ""
   githubRepo = "UOC/PLATACON_WEB_RI_PRO"
